--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>Material Design Bootstrap</title>
+    <title>Wilson Lo</title>
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
@@ -48,7 +48,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
         <div class="container">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">Wilson Lo</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -76,13 +76,13 @@
                 <!-- Social Icon  -->
                 <ul class="navbar-nav nav-flex-icons">
                     <li class="nav-item">
-                        <a class="nav-link"><i class="fab fa-facebook light-green-text-2"></i></a>
+                        <a class="nav-link" href="https://www.facebook.com/tsunlam.lo"><i class="fab fa-facebook light-green-text-2"></i></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"><i class="fab fa-linkedin light-green-text-2"></i></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link"><i class="fab fa-instagram light-green-text-2"></i></a>
+                        <a class="nav-link" href="https://www.instagram.com/wilson_lo_wl/?hl=zh-tw"><i class="fab fa-instagram light-green-text-2"></i></a>
                     </li>
                 </ul>
             </div>
@@ -366,17 +366,20 @@
                 <div class="card-body card-body-cascade text-center">
 
                     <!-- Title -->
-                    <h4 class="card-title"><strong>My adventure</strong></h4>
+                    <h4 class="card-title"><strong>More about me</strong></h4>
                     <!-- Subtitle -->
-                    <h6 class="font-weight-bold indigo-text py-2">Photography</h6>
+                    <h6 class="font-weight-bold indigo-text py-2">My Daily Life</h6>
                     <!-- Text -->
-                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem perspiciatis voluptatum a, quo nobis, non commodi quia repellendus sequi nulla voluptatem dicta reprehenderit, placeat laborum ut beatae ullam suscipit veniam.
+                    <p class="card-text">Want to know more about me? <br > Just visit my social media to know more! <br >
+                        You may also download my resume for more information about me too.
                     </p>
 
+                    <a class="btn btn-outline-yellow btn-rounded" style="margin: 0 0 20px 0 "><i class="fas fa-file left"></i> My Resume</a> <br >
+
                     <a class="px-2 fa-lg li-ic"><i class="fab fa-linkedin-in"></i></a>
-                    <a class="px-2 fa-lg ins-ic"><i class="fab fa-instagram"></i></a>
-                    <a class="px-2 fa-lg fb-ic"><i class="fab fa-facebook-f"></i></a>
-                    <a class="px-2 fa-lg yt-ic"><i class="fab fa-youtube"></i></a>
+                    <a class="px-2 fa-lg ins-ic" href="https://www.instagram.com/wilson_lo_wl/?hl=zh-tw"><i class="fab fa-instagram"></i></a>
+                    <a class="px-2 fa-lg fb-ic" href="https://www.facebook.com/tsunlam.lo"><i class="fab fa-facebook-f"></i></a>
+                    <a class="px-2 fa-lg yt-ic" href="https://www.youtube.com/channel/UCnIl3Cox85z4JV8oHF0VFXw?view_as=subscriber"><i class="fab fa-youtube"></i></a>
                 </div>
 
             </div>
@@ -387,7 +390,7 @@
     <!-- /.Third container -->
 
     <!-- Streak -->
-    <div class="streak streak-photo streak-md" style="background-image:url('https://mdbootstrap.com/img/Photos/Horizontal/Work/12-col/img%20%2811%29.jpg')">
+    <div class="streak streak-photo streak-md" style="background-image:url('img/1534412445739.JPEG')">
         <div class="mask flex-center rgba-indigo-strong">
             <div class="white-text smooth-scroll mx-4">
                 <h2 class="h2-responsive wow fadeIn mb-5"><i class="fa fa-quote-left" aria-hidden="true"></i> Develop with Passion, Learn with Heart <i class="fa fa-quote-right" aria-hidden="true"></i></h2>
@@ -406,7 +409,7 @@
             <h2 class="text-center text-uppercase my-5 pt-5 wow fadeIn" data-wow-delay="0.2s">My <strong>projects</strong></h2>
 
             <!-- Section description -->
-            <p class="text-center w-responsive mx-auto wow fadeIn my-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia iste provident, voluptatum voluptatibus aut modi aspernatur autem impedit, eius, debitis earum voluptatem. Quaerat hic aspernatur laborum magni earum. At, officiis!</p>
+            <p class="text-center w-responsive mx-auto wow fadeIn my-5">Want to learn more my projects?<br > Check my github and gitlab,here are some interesting projects list to you all, you may check it too.</p>
 
             <!-- First row -->
             <div class="row wow fadeIn" data-wow-delay="0.4s">
