--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@
 <div id="custom-border" class="card card-cascade narrower" style="width: 350px;position:fixed;right:5px;bottom:50px; z-index:1;">
     <div class="view view-cascade gradient-card-header btn-yellow" style="padding: 1rem 1rem">
         <h2 class="card-header-title mb-3">Chat with my bot</h2>
-        <p class="card-text">A bot makes by Mike Tea</p>
+        <p class="card-text">A cantonese bot makes by Mike Tea</p>
     </div>
     <div class="card-body card-body-cascade text-center">
         <div id="chat" class="chat-box-content" style="background-color: transparent">
