--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <a class="nav-link" href="#study" data-offset="100">Study</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#skills" data-offset="100">Skills</a>
+                        <a class="nav-link" href="#experiences" data-offset="100">Experiences</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#works" data-offset="100">Works</a>
@@ -90,7 +90,7 @@
     </nav>
 
     <!-- Intro Section -->
-    <div id="home" class="view jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url('https://mdbootstrap.com/img/Photos/Others/forest1.jpg'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
+    <div id="home" class="view jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url('img/1536899728316.JPEG'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
         <div class="mask rgba-white-strong">
             <div class="container h-100 d-flex justify-content-center align-items-center">
                 <div class="row smooth-scroll">
@@ -228,7 +228,7 @@
         <div class="container py-4 pt-4">
 
             <!-- Second section -->
-            <section id="skills">
+            <section id="experiences">
 
                 <!-- First row -->
                 <div class="row py-5">
@@ -248,7 +248,7 @@
                             </div>
                             <p class="font-weight-bold ml-1 dark-grey-text mb-2"> Asiabots - Part time</p>
                             <p class="font-weight-bold ml-1 dark-grey-text mb-2"> 2017 - Present (~ 1 year)</p>
-                            <p class="mb-0 ml-1 light-grey-text">On touch project in Frontend, Backend, cloud, IOT, ML and DL </p>
+                            <p class="mb-0 ml-1 light-grey-text">Research & Development (R&D) in NLP, IoT</p>
                         </blockquote>
 
                         <blockquote class="blockquote bq-warning mt-1 mb-4">
@@ -314,6 +314,12 @@
                             <div class="progress-bar" role="progressbar" style="width: 35%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
 
+                        <p class="black-text text-uppercase font-weight-bold pt-3" align="justify">Cloud Computing</p>
+                        <p class="mb-0 ml-1 light-grey-text" align="justify">AWS EC2, AWS Elastic Beanstalk (EBS)</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+
                         <p class="black-text text-uppercase font-weight-bold pt-3" align="justify">Machine Learning</p>
                         <p class="mb-0 ml-1 light-grey-text" align="justify">Tensorflow, Keras, PyTorch (SVM, KNN etc.)</p>
                         <div class="progress">
@@ -321,7 +327,7 @@
                         </div>
 
                         <p class="black-text text-uppercase font-weight-bold pt-3" align="justify">Deep Learning</p>
-                        <p class="mb-0 ml-1 light-grey-text" align="justify">Tensorflow, Keras, PyTorch (CNN, RNN, RCNN, S2S, Word2vec, Fasttext)</p>
+                        <p class="mb-0 ml-1 light-grey-text" align="justify">Tensorflow, Keras, PyTorch (CNN, RNN, RCNN, S2S, LSTM, Word2vec, Fasttext)</p>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width: 15%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
@@ -356,7 +362,7 @@
 
                 <!-- Card image -->
                 <div class="view view-cascade overlay">
-                    <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Slides/img%20(70).jpg" alt="Card image cap">
+                    <img class="card-img-top" src="img/1536900036562.JPEG" alt="Card image cap">
                     <a href="#!">
                         <div class="mask rgba-white-slight"></div>
                     </a>
