--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="css/mdbootstrap/mdb.min.css" rel="stylesheet">
 
     <!-- Your custom styles (optional) -->
-    <link href="css/mdbootstrap/style.css" rel="stylesheet">
+    <!--<link href="css/mdbootstrap/style.css" rel="stylesheet">-->
 
     <link rel="stylesheet" href="css/chat_widget/frame.css">
 
@@ -244,7 +244,7 @@
                         <!--Description-->
                         <blockquote class="blockquote bq-warning mb-4">
                             <div class="row"> <i class="fas fa-briefcase fa-x mb-1 mr-3 ml-3 dark-grey-text" aria-hidden="true"></i>
-                                <h5 class="font-weight-bold mb-3">Full Stack & ML developer</h5>
+                                <h5 class="font-weight-bold mb-3">Full Stack & NLP chatbot engineer /h5>
                             </div>
                             <p class="font-weight-bold ml-1 dark-grey-text mb-2"> Asiabots - Part time</p>
                             <p class="font-weight-bold ml-1 dark-grey-text mb-2"> 2017 - Present (~ 1 year)</p>
@@ -257,7 +257,7 @@
                             </div>
                             <p class="font-weight-bold ml-1 dark-grey-text mb-2">Microsoft IA Project - Full Time</p>
                             <p class="font-weight-bold ml-1 dark-grey-text mb-2">March, 2017 - September 2016 (3 Months)</p>
-                            <p class="mb-0 ml-1 light-grey-text">Motor of Chatbot project base on Microsoft Luis</p>
+                            <p class="mb-0 ml-1 light-grey-text">Mentor of Chatbot project base on Microsoft Luis</p>
                         </blockquote>
 
                         <blockquote class="blockquote bq-warning">
@@ -380,7 +380,7 @@
                         You may also download my resume for more information about me too.
                     </p>
 
-                    <a class="btn btn-outline-yellow btn-rounded" style="margin: 0 0 20px 0 "><i class="fas fa-file left"></i> My Resume</a> <br >
+                    <a href="img/Resume.pdf" class="btn btn-outline-yellow btn-rounded" style="margin: 0 0 20px 0 " download><i class="fas fa-file left"></i> My Resume</a> <br >
 
                     <a class="px-2 fa-lg li-ic"><i class="fab fa-linkedin-in"></i></a>
                     <a class="px-2 fa-lg ins-ic" href="https://www.instagram.com/wilson_lo_wl/?hl=zh-tw"><i class="fab fa-instagram"></i></a>
