--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                         <!--Description-->
                         <blockquote class="blockquote bq-warning mb-4">
                             <div class="row"> <i class="fas fa-briefcase fa-x mb-1 mr-3 ml-3 dark-grey-text" aria-hidden="true"></i>
-                                <h5 class="font-weight-bold mb-3">Full Stack & NLP chatbot engineer /h5>
+                                <h5 class="font-weight-bold mb-3">Full Stack & NLP chatbot engineer </h5>
                             </div>
                             <p class="font-weight-bold ml-1 dark-grey-text mb-2"> Asiabots - Part time</p>
                             <p class="font-weight-bold ml-1 dark-grey-text mb-2"> 2017 - Present (~ 1 year)</p>
