--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
                     <!--Panel-->
                     <div class="card card-body hoverable">
-                        <i class="fas fa-pencil-alt dark-grey-text fa-3x mb-4" aria-hidden="true"></i>
+                        <i class="fa fa-pencil-alt dark-grey-text fa-3x mb-4" aria-hidden="true"></i>
                         <h5 class="font-weight-bold text-uppercase mb-4">Front End</h5>
                         <p class="dark-grey-text">Base on Angular6 and VueJS. Design with Modern Material Design in NPM and Yarn</p>
                     </div>
