--- a/index.html
+++ b/index.html
@@ -676,7 +676,7 @@
     <ul class="nav smooth-scroll flex-column">
         <li class="nav-item"><a class="nav-link" href="#home"><span></span></a></li>
         <li class="nav-item"><a class="nav-link" href="#about"><span></span></a></li>
-        <li class="nav-item"><a class="nav-link" href="#skills"><span></span></a></li>
+        <li class="nav-item"><a class="nav-link" href="#study"><span></span></a></li>
         <li class="nav-item"><a class="nav-link" href="#works"><span></span></a></li>
         <li class="nav-item"><a class="nav-link" href="#contact"><span></span></a></li>
     </ul>
