--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                                 <h5 class="font-weight-bold mb-3">Full Stack & NLP chatbot engineer </h5>
                             </div>
                             <p class="font-weight-bold ml-1 dark-grey-text mb-2"> Asiabots - Part time</p>
-                            <p class="font-weight-bold ml-1 dark-grey-text mb-2"> 2017 - Present (~ 1 year)</p>
+                            <p class="font-weight-bold ml-1 dark-grey-text mb-2"> 2017 - Present (~ 2 year)</p>
                             <p class="mb-0 ml-1 light-grey-text">Research & Development (R&D) in NLP, IoT</p>
                         </blockquote>
 
@@ -299,13 +299,13 @@
                         <p class="black-text text-uppercase font-weight-bold pt-3" align="justify">Backend</p>
                         <p class="mb-0 ml-1 light-grey-text" align="justify">Flask, Firebase, MongoDB, MYSQL, Postman etc.</p>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
 
                         <p class="black-text text-uppercase font-weight-bold pt-3" align="justify">DevOps</p>
-                        <p class="mb-0 ml-1 light-grey-text" align="justify">Docker</p>
+                        <p class="mb-0 ml-1 light-grey-text" align="justify">CI/CD (Gitlab Ci, Gitlab Runner), Docker</p>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 30%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
 
                         <p class="black-text text-uppercase font-weight-bold pt-3" align="justify">Project Management</p>
@@ -314,10 +314,16 @@
                             <div class="progress-bar" role="progressbar" style="width: 35%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
 
-                        <p class="black-text text-uppercase font-weight-bold pt-3" align="justify">Cloud Computing</p>
-                        <p class="mb-0 ml-1 light-grey-text" align="justify">AWS EC2, AWS Elastic Beanstalk (EBS)</p>
+                        <p class="black-text text-uppercase font-weight-bold pt-3" align="justify">Network Security</p>
+                        <p class="mb-0 ml-1 light-grey-text" align="justify">Network Security Defense, Network Security Attack (DDOS etc.)</p>
                         <div class="progress">
-                            <div class="progress-bar" role="progressbar" style="width: 65%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div class="progress-bar" role="progressbar" style="width: 20%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                        </div>
+
+                        <p class="black-text text-uppercase font-weight-bold pt-3" align="justify">Cloud Computing</p>
+                        <p class="mb-0 ml-1 light-grey-text" align="justify">AWS EC2, AWS Elastic Beanstalk (EBS),AWS S3</p>
+                        <div class="progress">
+                            <div class="progress-bar" role="progressbar" style="width: 70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
 
                         <p class="black-text text-uppercase font-weight-bold pt-3" align="justify">Machine Learning</p>
@@ -327,7 +333,7 @@
                         </div>
 
                         <p class="black-text text-uppercase font-weight-bold pt-3" align="justify">Deep Learning</p>
-                        <p class="mb-0 ml-1 light-grey-text" align="justify">Tensorflow, Keras, PyTorch (CNN, RNN, RCNN, S2S, LSTM, Word2vec, Fasttext)</p>
+                        <p class="mb-0 ml-1 light-grey-text" align="justify">Tensorflow, Keras, PyTorch (CNN, RNN, RCNN, S2S, LSTM, Word2vec, Fasttext, Bert)</p>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width: 15%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
