--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                         </div>
 
                         <p class="black-text text-uppercase font-weight-bold pt-3" align="justify">DevOps</p>
-                        <p class="mb-0 ml-1 light-grey-text" align="justify">CI/CD (Gitlab Ci, Gitlab Runner), Docker</p>
+                        <p class="mb-0 ml-1 light-grey-text" align="justify">CT/CI/CD Mocha, (Gitlab Ci, Gitlab Runner), Docker</p>
                         <div class="progress">
                             <div class="progress-bar" role="progressbar" style="width: 60%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
