--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
                     <!--Panel-->
                     <div class="card card-body hoverable">
                         <i class="fa fa-code dark-grey- fa-3x mb-4" aria-hidden="true"></i>
-                        <h5 class="font-weight-bold text-uppercase mb-4">Back End</h5>
-                        <p class="dark-grey-text">Base on Python Flask. Provide a fast and stable environment for all application.</p>
+                        <h5 class="font-weight-bold text-uppercase mb-4">Full Stack</h5>
+                        <p class="dark-grey-text">Front-end in VueJS,Angular,react. Back-end in python,Golang</p>
                     </div>
                     <!--/.Panel-->
 
@@ -159,9 +159,9 @@
 
                     <!--Panel-->
                     <div class="card card-body hoverable">
-                        <i class="far fa-edit dark-grey-text fa-3x mb-4" aria-hidden="true"></i>
-                        <h5 class="font-weight-bold text-uppercase mb-4">Front End</h5>
-                        <p class="dark-grey-text">Base on Angular6 and VueJS. Design with Modern Material Design in NPM and Yarn</p>
+                        <i class="fas fa-cloud dark-grey-text fa-3x mb-4" aria-hidden="true"></i>
+                        <h5 class="font-weight-bold text-uppercase mb-4">DevOps</h5>
+                        <p class="dark-grey-text">Main in AWS, integrate with Terraform, help your company design a cloud infrastructure</p>
                     </div>
                     <!--/.Panel-->
 
