--- a/index.html
+++ b/index.html
@@ -385,9 +385,10 @@
                     <p class="card-text">Want to know more about me? <br > Just visit my social media to know more! <br >
                         You may also download my resume for more information about me too.
                     </p>
-
+                    <div>
+                        <img style="max-width: 200px;" src="img/frame.png">
+                    </div>
                     <a href="img/Resume.pdf" class="btn btn-outline-yellow btn-rounded" style="margin: 0 0 20px 0 " download><i class="fas fa-file left"></i> My Resume</a> <br >
-
                     <a class="px-2 fa-lg li-ic"><i class="fab fa-linkedin-in"></i></a>
                     <a class="px-2 fa-lg ins-ic" href="https://www.instagram.com/wilson_lo_wl/?hl=zh-tw"><i class="fab fa-instagram"></i></a>
                     <a class="px-2 fa-lg fb-ic" href="https://www.facebook.com/tsunlam.lo"><i class="fab fa-facebook-f"></i></a>
